9-day add printByTag